overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
 .App {
   display: flex;
